[gd_scene load_steps=4 format=3 uid="uid://buygs21whr8qm"]

[ext_resource type="Script" path="res://Scripts/Cards_Scripts/usablecard.gd" id="1_110iw"]
[ext_resource type="PackedScene" uid="uid://b3mrg4roiuudb" path="res://Scenes/Cards/card.tscn" id="2_vghhj"]
[ext_resource type="Texture2D" uid="uid://bmj8k0r1ygma7" path="res://Assets/Sprites/Cards/Creature/Charley_Face.png" id="3_376nm"]

[node name="UsableCard" type="Node2D" node_paths=PackedStringArray("card", "card_image")]
script = ExtResource("1_110iw")
card = NodePath("Card")
card_image = NodePath("Sprite2D")

[node name="Card" parent="." instance=ExtResource("2_vghhj")]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, -56)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_376nm")

[node name="AttackAction" type="Node2D" parent="."]

[node name="CharacterFunc" type="Node2D" parent="."]

[connection signal="mouse_entered" from="Card" to="." method="_on_card_mouse_entered"]
[connection signal="mouse_exited" from="Card" to="." method="_on_card_mouse_exited"]
